Изменение конфигов, контроллеров, сущностей, ямла и бд
